--- a/DL/DL/DL.Web.csproj
+++ b/DL/DL/DL.Web.csproj
@@ -209,6 +209,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DiaryLogController.cs" />
+    <Compile Include="Controllers\DiaryLogNewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -224,6 +225,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
+    <Compile Include="ViewModels\DiaryLogNew\DiaryLogNewCreateViewModel.cs" />
+    <Compile Include="ViewModels\DiaryLogNew\DiaryLogNewEditViewModel.cs" />
+    <Compile Include="ViewModels\DiaryLogNew\DiaryLogNewIndexViewModel.cs" />
     <Compile Include="ViewModels\DiaryLog\DiaryLogGroupByDateViewModel.cs" />
     <Compile Include="ViewModels\DiaryLog\DiaryLogSearchViewModel.cs" />
     <Compile Include="ViewModels\DiaryLog\DiaryLogViewModel.cs" />
@@ -465,6 +469,11 @@
     <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\User\Delete.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Collection.cshtml" />
+    <Content Include="Views\DiaryLogNew\Index.cshtml" />
+    <Content Include="Views\DiaryLogNew\Edit.cshtml" />
+    <Content Include="Views\DiaryLogNew\_DiaryLogEditDetailPartialView.cshtml" />
+    <Content Include="Views\DiaryLogNew\_DiaryLogDetailPartialView.cshtml" />
+    <Content Include="Views\DiaryLogNew\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
