--- a/DL/DL/DL.Web.csproj
+++ b/DL/DL/DL.Web.csproj
@@ -209,6 +209,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Base\BaseController.cs" />
     <Compile Include="Controllers\DiaryLogController.cs" />
     <Compile Include="Controllers\DiaryLogNewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -479,6 +480,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="helper\" />
+    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
