--- a/DL/DL.Models/DL.Models.csproj
+++ b/DL/DL.Models/DL.Models.csproj
@@ -69,10 +69,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DiaryLogModel.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Interface\IGenericRepository.cs" />
+    <Compile Include="Repository\Class\Base\DiaryLogRepository.cs" />
+    <Compile Include="Repository\Interface\IGenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Class\Base\UserRepository.cs" />
     <Compile Include="Repository\GenericRepository.cs" />
+    <Compile Include="Service\DiaryLogs\DiaryLogService.cs" />
     <Compile Include="Service\Users\UserInsertSV.cs" />
     <Compile Include="Service\Users\UserService.cs" />
     <Compile Include="Service\Users\ValidateLoginSV.cs" />
