Add superuser detail

--- a/DL/DL.Models/DL.Models.csproj
+++ b/DL/DL.Models/DL.Models.csproj
@@ -70,14 +70,17 @@
       <DependentUpon>DiaryLogModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Repository\Class\Base\DiaryLogRepository.cs" />
+    <Compile Include="Repository\Class\UserAndDiaryLogRepository.cs" />
     <Compile Include="Repository\Interface\IGenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Class\Base\UserRepository.cs" />
     <Compile Include="Repository\GenericRepository.cs" />
     <Compile Include="Service\DiaryLogs\DiaryLogService.cs" />
-    <Compile Include="Service\Users\UserInsertSV.cs" />
+    <Compile Include="Service\ServiceModels\DiaryLogAndUserSM.cs" />
+    <Compile Include="Service\UserAndDiaryLogService.cs" />
+    <Compile Include="Service\Users\UserInsertSM.cs" />
     <Compile Include="Service\Users\UserService.cs" />
-    <Compile Include="Service\Users\ValidateLoginSV.cs" />
+    <Compile Include="Service\Users\ValidateLoginSM.cs" />
     <Compile Include="User.cs">
       <DependentUpon>DiaryLogModel.tt</DependentUpon>
     </Compile>
