User Edit modify

--- a/DL/DL.Models/DL.Models.csproj
+++ b/DL/DL.Models/DL.Models.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Repository\GenericRepository.cs" />
     <Compile Include="Service\DiaryLogs\DiaryLogService.cs" />
     <Compile Include="Service\ServiceModels\DiaryLogAndUserSM.cs" />
+    <Compile Include="Service\ServiceModels\User\UserEditSV.cs" />
     <Compile Include="Service\UserAndDiaryLogService.cs" />
     <Compile Include="Service\Users\UserInsertSM.cs" />
     <Compile Include="Service\Users\UserService.cs" />
