--- a/DL/DL/DL.Web.csproj
+++ b/DL/DL/DL.Web.csproj
@@ -204,7 +204,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionFilter\Auth.cs" />
+    <Compile Include="Utilities\ActionFilter\Auth.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -223,6 +223,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\Attribute\EmailAttribute.cs" />
+    <Compile Include="Utilities\MD5Encoder.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -485,6 +487,7 @@
     <Content Include="Views\DiaryLogNew\MasterIndex.cshtml" />
     <Content Include="Views\DiaryLogNew\Detail.cshtml" />
     <Content Include="Views\Test\ValidateFrontEnd.cshtml" />
+    <Content Include="Views\User\EditSuccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
