--- a/DL/DL/DL.Web.csproj
+++ b/DL/DL/DL.Web.csproj
@@ -225,9 +225,9 @@
     </Compile>
     <Compile Include="Utilities\Attribute\EmailAttribute.cs" />
     <Compile Include="Utilities\MD5Encoder.cs" />
-    <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\Account\LoginVM.cs" />
     <Compile Include="ViewModels\Account\RegisterVM.cs" />
     <Compile Include="ViewModels\DiaryLogNew\DiaryLogDetailVM.cs" />
     <Compile Include="ViewModels\DiaryLogNew\DiaryLogNewCreateVM.cs" />
@@ -460,13 +460,10 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Shared\Lockout.cshtml" />
-    <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\DiaryLog\Create.cshtml" />
     <Content Include="Views\DiaryLog\Delete.cshtml" />
@@ -488,6 +485,7 @@
     <Content Include="Views\DiaryLogNew\Detail.cshtml" />
     <Content Include="Views\Test\ValidateFrontEnd.cshtml" />
     <Content Include="Views\User\EditSuccess.cshtml" />
+    <Content Include="Views\Shared\_LoginPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
