--- a/DL/DL/DL.Web.csproj
+++ b/DL/DL/DL.Web.csproj
@@ -291,6 +291,7 @@
     <Content Include="Content\jquery-ui-themes-1.11.4\themes\sunny\jquery-ui.css" />
     <Content Include="Content\jquery-ui-themes-1.11.4\themes\sunny\jquery-ui.min.css" />
     <Content Include="Content\jquery-ui-themes-1.11.4\themes\sunny\theme.css" />
+    <Content Include="Content\styles.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -440,6 +441,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\lumino.glyphs.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\moment-with-locales.js" />
     <Content Include="Scripts\moment-with-locales.min.js" />
@@ -485,6 +487,8 @@
     <Content Include="Views\User\EditSuccess.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\DiaryLogNew\JobWeight.cshtml" />
+    <Content Include="Views\Shared\_Menu.cshtml" />
+    <Content Include="Views\Shared\_UserMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
