--- a/DL/DL/bin/DL.Web.dll.config
+++ b/DL/DL/bin/DL.Web.dll.config
@@ -23,6 +23,7 @@
     <add key="PageSize" value="5" />
   </appSettings>
   <system.web>
+    <sessionState timeout="2"></sessionState>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
