--- a/DL/DL/Web.config
+++ b/DL/DL/Web.config
@@ -23,7 +23,7 @@
     <add key="PageSize" value="5" />
   </appSettings>
   <system.web>
-    <sessionState timeout="480"></sessionState>
+    <sessionState timeout="540"></sessionState>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -41,6 +41,12 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+    </staticContent>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
